[tool.poetry]
name = "leximenter"
version = "0.1.0"
description = "A simple lexical test"
authors = ["Alan Kersaudy <alan.kersaudy@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
leximenter = "leximenter.main:main"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
